recursion.lessons.recursion.tree.Tree.scala.error
Tree:13: error: value */ is not a member of Unit
		avance(length*shrink)*/
                                     ^